add w02 index.html

--- a/demo/w02/index.html
+++ b/demo/w02/index.html
@@ -7,7 +7,9 @@
     <title>My introduction</title>
 </head>
 <body>
+    <img src="./下載.png" width="400px" alt="tku csie">
     <h2>Name: champion</h2>
     <h3>ID: 409411716</h3>
+    <a href="http://www.csie.tku.edu.tw/">CSIE of TKU</a>
 </body>
 </html>
