--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <li>
-        <a href="./demo/w02/"></a>
+        <a href="./demo/w02/">my introduction</a>
     </li>
     <li>
-        <a href="./demo/w03/card_16.html"></a>
+        <a href="./demo/w02/w03/card_16.html">css</a>
     </li>
 </body>
 </html>
