--- a/demo/w02/w05/blog_16.html
+++ b/demo/w02/w05/blog_16.html
@@ -15,11 +15,87 @@
         <div class="blogs-center">
             <article class="blog">
                 <img src="./images/coffee.jpg" alt="" class="img">
+                <div class="blog-content">
+                    <span>Lifesytle</span>
+                    <h3>why coffee is awesome</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, ducimus</p>
+                    <a href="#">read more</a>
+                </div>
             </article>
             <article class="blog">
                 <img src="./images/london.jpg" alt="" class="img">
+                <span>travel</span>
+                <h3>travel to paris</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, ducimus</p>
+                <a href="#">read more</a>
+            </article>
+            <article class="blog">
+                <img src="./images/P.jpg" alt="" class="img">
+                <span>travel</span>
+                <h3>travel to paris</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, ducimus</p>
+                <a href="#">read more</a>
             </article>
         </div>
+        <div class="blogs-center2">
+            <article class="blog">
+                <img src="./images/photo1.jpg" alt="" class="img">
+                <span>travel</span>
+                <h3>travel to paris</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, ducimus</p>
+                <a href="#">read more</a>
+            </article>
+            <article class="blog">
+                <img src="./images/photo2.jpg" alt="" class="img">
+                <span>travel</span>
+                <h3>travel to paris</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, ducimus</p>
+                <a href="#">read more</a>
+            </article>
+            <article class="blog">
+                <img src="./images/photo3.jpg" alt="" class="img">
+                <span>travel</span>
+                <h3>travel to paris</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, ducimus</p>
+                <a href="#">read more</a>
+            </article>
+            <article class="blog">
+                <img src="./images/photo4.jpg" alt="" class="img">
+                <span>travel</span>
+                <h3>travel to paris</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, ducimus</p>
+                <a href="#">read more</a>
+            </article>
+            <article class="blog">
+                <img src="./images/photo5.jpg" alt="" class="img">
+                <span>travel</span>
+                <h3>travel to paris</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, ducimus</p>
+                <a href="#">read more</a>
+            </article>
+            <article class="blog">
+                <img src="./images/photo6.jpg" alt="" class="img">
+                <span>travel</span>
+                <h3>travel to paris</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, ducimus</p>
+                <a href="#">read more</a>
+            </article>
+            <article class="blog">
+                <img src="./images/photo7.jpg" alt="" class="img">
+                <span>travel</span>
+                <h3>travel to paris</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, ducimus</p>
+                <a href="#">read more</a>
+            </article>
+            <article class="blog">
+                <img src="./images/photo8.jpg" alt="" class="img">
+                <span>travel</span>
+                <h3>travel to paris</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, ducimus</p>
+                <a href="#">read more</a>
+            </article>
+        </div>
+        
     </section>
     
 </body>
