--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>111-1 demo</title>
+    <title>My homepage</title>
 </head>
 <body>
     <li>
-        <a href="./demo/w02/">my introduction</a>
+        <a href="./demo_16.html">Demo</a>
     </li>
-    <li>
-        <a href="./demo/w02/w03/card_16.html">css</a>
-    </li>
+
 </body>
 </html>
