--- a/demo/w02/w09/multipage_16.html
+++ b/demo/w02/w09/multipage_16.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style_16.css">
 </head>
 <body>
@@ -27,7 +28,15 @@
                 </li>
           
             </ul>
-        </div>
+            <ul class="nav-links">
+                <li>
+                    <a href="../../../demo_16.html">demo</a>
+                </li>
+                <li>
+                    <a href="./resume_16.html">resume</a>
+                </li>
+          
+            </ul>
     </nav>
     <section class="blogs" id="section-blogs-mixmax">
         <div class="section-title">
