--- a/demo/w02/w09/resume_16.html
+++ b/demo/w02/w09/resume_16.html
@@ -18,6 +18,31 @@
                         <h2 class="name">John Due</h2>
                         <p class="career">Software Engineer</p>
                     </div>
+                    <div class="contact-info">
+                        <h3 class="main-title">Contact Info</h3>
+                        <ul>
+                            <li>
+                                <i class="fa fa-phone"></i>
+                                07661892982
+                            </li>
+                            <li>
+                                <i class="fa fa-fax"></i>
+                                409411716@gms.tku.edu.tw
+                            </li>
+                            <li>
+                                <i class="fa fa-facebook"></i>
+                                www.facebook.com/lorem
+                            </li>
+                            <li>
+                                <i class="fa fa-instagram"></i>
+                                @loremipsum
+                            </li>
+                            <li>
+                                <i class="fa fa-map-marker"></i>
+                                37 Pramount St, Londom
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
