--- a/demo_16.html
+++ b/demo_16.html
@@ -12,7 +12,7 @@
         <div class="nav-center">
             <!-- nav header -->
             <div class="nav-header">
-                <h3>409411716</h3>
+                <h4>409411716</h4>
             </div>
             <!-- nav link -->
             <ul class="nav-links">
@@ -30,6 +30,9 @@
                 </li>
                 <li onclick="showpage(5)">
                     <a href="#">w8-landing</a>
+                </li>
+                <li onclick="showpage(6)">
+                    <a href="#">w9-resume</a>
                 </li>
             </ul>
         </div>
